added copyright and link to my personal site

--- a/index.html
+++ b/index.html
@@ -61,13 +61,17 @@
           Hexadecimal beat notation is currently implemented in:
         </p>
         <ul>
-          <li>csound-live-code (online livecoding tool and csound library): <a href="https://live.csound.com">online tool</a> | 
+          <li>csound-live-code (online livecoding environment and csound library): <a href="https://live.csound.com">online tool</a> | 
             <a href="https://github.com/kunstmusik/csound-live-code/blob/master/doc/hexadecimal_beats.md">docs</a>
           </li>
           <li>score (clojure library for music generation): <a href="https://github.com/kunstmusik/score/blob/master/doc/beats.md">docs</a>
           </li>
         </ul>
       </section>
+
+      <footer>
+        <small>&copy; Copyright 2019, <a href="https://kunstmusik.com">Steven Yi</a>. All rights reserved.</small>
+      </footer>
     </main>
 
     <script src="main.js"></script>
